--- a/WPF Webcam/KrausGRA.csproj
+++ b/WPF Webcam/KrausGRA.csproj
@@ -106,6 +106,9 @@
     <Resource Include="Images\iconcamera.png" />
     <Resource Include="Images\iconplay.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Stopicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
