Box Information UI designing

--- a/KrausGRA/KrausGRA.csproj
+++ b/KrausGRA/KrausGRA.csproj
@@ -158,7 +158,9 @@
   <ItemGroup>
     <Resource Include="Images\logo.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\white.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
