--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -21,4 +21,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="x3v6Entities" connectionString="metadata=res://*/EntityModel.x3v6.csdl|res://*/EntityModel.x3v6.ssdl|res://*/EntityModel.x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
