Classes added and designing models

--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -110,7 +110,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DBLogics\cmdSRNumber.cs" />
+    <Compile Include="DBLogics\cmdSageOperations.cs" />
     <Compile Include="EntityModel\x3v6.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -125,6 +125,9 @@
     </Compile>
     <Compile Include="Views\Box.cs" />
     <Compile Include="Views\Image.cs" />
+    <Compile Include="Views\NumberType.cs" />
+    <Compile Include="Views\RMAInfo.cs" />
+    <Compile Include="Views\SReturn.cs" />
     <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
