--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -115,6 +115,7 @@
     </ApplicationDefinition>
     <Compile Include="DBLogics\cmdReturn.cs" />
     <Compile Include="DBLogics\cmdReturnDetail.cs" />
+    <Compile Include="DBLogics\cmdReturnImages.cs" />
     <Compile Include="DBLogics\cmdRoles.cs" />
     <Compile Include="DBLogics\cmdSageOperations.cs" />
     <Compile Include="DBLogics\cmdUser.cs" />
