Set Commands in model designed

--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -119,10 +119,10 @@
     <Compile Include="DBLogics\cmdRoles.cs" />
     <Compile Include="DBLogics\cmdSageOperations.cs" />
     <Compile Include="DBLogics\cmdUser.cs" />
-    <Compile Include="EntityModel\RMASYTEM.Designer.cs">
+    <Compile Include="EntityModel\RMASYSTEMModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>RMASYTEM.edmx</DependentUpon>
+      <DependentUpon>RMASYSTEMModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="EntityModel\x3v6.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -186,17 +186,17 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <EntityDeploy Include="EntityModel\RMASYTEM.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>RMASYTEM.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="EntityModel\RMASYTEM.edmx.diagram">
-      <DependentUpon>RMASYTEM.edmx</DependentUpon>
-    </None>
     <EntityDeploy Include="EntityModel\x3v6.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>x3v6.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <EntityDeploy Include="EntityModel\RMASYSTEMModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>RMASYSTEMModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="EntityModel\RMASYSTEMModel.edmx.diagram">
+      <DependentUpon>RMASYSTEMModel.edmx</DependentUpon>
+    </None>
     <None Include="EntityModel\x3v6.edmx.diagram">
       <DependentUpon>x3v6.edmx</DependentUpon>
     </None>
