--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -21,8 +21,5 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <connectionStrings>
-    <add name="x3v6Entities" connectionString="metadata=res://*/EntityModel.x3v6.csdl|res://*/EntityModel.x3v6.ssdl|res://*/EntityModel.x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="RMASYSTEMEntities" connectionString="metadata=res://*/EntityModel.RMASYTEM.csdl|res://*/EntityModel.RMASYTEM.ssdl|res://*/EntityModel.RMASYTEM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.5.241;initial catalog=RMASYSTEM;persist security info=True;user id=sa;password=2wvcDW8j;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="x3v6Entities" connectionString="metadata=res://*/EntityModel.x3v6.csdl|res://*/EntityModel.x3v6.ssdl|res://*/EntityModel.x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="RMASYSTEMEntities" connectionString="metadata=res://*/EntityModel.RMASYSTEMModel.csdl|res://*/EntityModel.RMASYSTEMModel.ssdl|res://*/EntityModel.RMASYSTEMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.5.241;initial catalog=RMASYSTEM;persist security info=True;user id=sa;password=2wvcDW8j;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
