--- a/KrausxRGA/KrausRGA.csproj
+++ b/KrausxRGA/KrausRGA.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Views\Box.cs" />
     <Compile Include="Views\clGlobal.cs" />
     <Compile Include="Views\ePermissione.cs" />
+    <Compile Include="Views\ExtensionParent.cs" />
     <Compile Include="Views\ImageK.cs" />
     <Compile Include="Views\eNumberType.cs" />
     <Compile Include="Views\RMAInfo.cs" />
