Images save path added in config file

--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -12,6 +12,9 @@
       <setting name="CameraNumber" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="DrivePath" serializeAs="String">
+        <value>C:\\SKUReturned</value>
+      </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
   <entityFramework>
