--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -15,6 +15,12 @@
       <setting name="DrivePath" serializeAs="String">
         <value>C:\\SKUReturned</value>
       </setting>
+      <setting name="GetServicePath" serializeAs="String">
+        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc</value>
+      </setting>
+      <setting name="SetServicePath" serializeAs="String">
+        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc</value>
+      </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
   <entityFramework>
