--- a/KrausxRGA/Properties/Settings.settings
+++ b/KrausxRGA/Properties/Settings.settings
@@ -9,10 +9,10 @@
       <Value Profile="(Default)">C:\\SKUReturned</Value>
     </Setting>
     <Setting Name="GetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc</Value>
+      <Value Profile="(Default)">http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc/SOA</Value>
     </Setting>
     <Setting Name="SetServicePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc</Value>
+      <Value Profile="(Default)">http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc/SOA</Value>
     </Setting>
   </Settings>
 </SettingsFile>
