--- a/KrausxRGA/app.config
+++ b/KrausxRGA/app.config
@@ -16,10 +16,10 @@
         <value>C:\\SKUReturned</value>
       </setting>
       <setting name="GetServicePath" serializeAs="String">
-        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc</value>
+        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Get.svc/SOA</value>
       </setting>
       <setting name="SetServicePath" serializeAs="String">
-        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc</value>
+        <value>http://192.168.5.66/KrausWarehouseServices.Service.RMA.Save.svc/SOA</value>
       </setting>
     </KrausRGA.Properties.Settings>
   </applicationSettings>
